--- a/source/baseline/Comparison_tool.ipynb
+++ b/source/baseline/Comparison_tool.ipynb
@@ -11,19 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CF,lo,la={},{},{}\n",
     "#Single day benchmark results\n",
-    "bmDay_resu=\"/umbc/xfs1/jianwu/users/charaj1/CMAC/MODIS-Aggregation/MODAgg_3var_oneDay_20080101.hdf5\"\n",
-    "CF_BMK,_,_=readData(bmDay_resu)"
+    "bmDay_resu=\"/umbc/xfs1/jianwu/users/charaj1/CMAC/MODIS-Aggregation/output-data/benchmark/MODAgg_3var_parMonth/\"\n",
+    "CF_BMK,_,_=readData(bmDay_resu+\"MODAgg_3var_parMonth_20080101.hdf5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -60,23 +59,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(180, 360)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "CF['rwDay'].shape"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
