Explicit example was added

--- a/source/baseline/Comparison_tool.ipynb
+++ b/source/baseline/Comparison_tool.ipynb
@@ -2,22 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from comparisons import *"
+    "from comparisons import readData"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Single day benchmark results\n",
     "bmDay_resu=\"/umbc/xfs1/jianwu/users/charaj1/CMAC/MODIS-Aggregation/output-data/benchmark/MODAgg_3var_parMonth/\"\n",
-    "CF_BMK,_,_=readData(bmDay_resu+\"MODAgg_3var_parMonth_20080101.hdf5\")"
+    "CF_BMK,_,_=readData(bmDay_resu+\"MODAgg_3var_parMonth_20080101.hdf5\")\n",
+    "CF_Res,_,_=readData(bmDay_resu+\"MODAgg_3var_parMonth_20080101.hdf5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig1,fig1_ttl=doPlot(CF_BMK,CF_Res,'Redwins 1-Day results')"
    ]
   },
   {
