Example case finalized

--- a/source/baseline/Comparison_tool.ipynb
+++ b/source/baseline/Comparison_tool.ipynb
@@ -1,18 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from comparisons import readData, doPlot\n",
-    "from netCDF4 import Dataset"
+    "# Comparison Example\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -37,39 +34,26 @@
     }
    ],
    "source": [
+    "from comparisons import readData, doPlot\n",
     "#Single day benchmark results\n",
-    "bmDay_resu=\"/umbc/xfs1/jianwu/users/charaj1/CMAC/MODIS-Aggregation/output-data/benchmark/MODAgg_3var_parMonth/\"\n",
-    "CF_BMK,_,_=readData(bmDay_resu+\"MODAgg_3var_parMonth_20080101.hdf5\")#Benchmakr\n",
-    "CF_Res,_,_=readData(bmDay_resu+\"MODAgg_3var_parMonth_20080101.hdf5\")#Results for the comparison\n",
+    "benchmark_p=\"/umbc/xfs1/jianwu/users/charaj1/CMAC/MODIS-Aggregation/output-data/benchmark/MODAgg_3var_parMonth/\"\n",
+    "comparisonP=\"/umbc/xfs1/jianwu/users/charaj1/CMAC/MODIS-Aggregation/output-data/benchmark/MODAgg_3var_parMonth/\"\n",
+    "CF_BMK,_,_=readData(benchmark_p+\"MODAgg_3var_parMonth_20080101.hdf5\")#Benchmark\n",
+    "CF_Res,_,_=readData(comparisonP+\"MODAgg_3var_parMonth_20080101.hdf5\")#Results for the comparison\n",
     "fig1,fig1_ttl=doPlot(CF_BMK,CF_Res,'Comparison')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "#Redwan's results (He does not use save_hdf() to save output files.)\n",
-    "rwDay_resu=\"/umbc/xfs1/jianwu/users/rwalid1/individual/work/Cybtrn-team3/Jan_CF_XR_L2L3_Jun19_n4_run1_1day.nc\"\n",
-    "f = Dataset(rwDay_resu, \"r\")\n",
-    "CF_Res=f.variables['__xarray_dataarray_variable__'][:]\n",
-    "f.close()"
+    "# Redwan's results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -93,8 +77,24 @@
     }
    ],
    "source": [
+    "benchmark_p=\"/umbc/xfs1/jianwu/users/charaj1/CMAC/MODIS-Aggregation/output-data/benchmark/MODAgg_3var_parMonth/\"\n",
+    "CF_BMK,_,_=readData(benchmark_p+\"MODAgg_3var_parMonth_20080101.hdf5\")#Benchmark\n",
+    "#Redwan's results (He does not use save_hdf() to save output files.)\n",
+    "from netCDF4 import Dataset\n",
+    "f = Dataset(rwDay_resu, \"r\")\n",
+    "CF_Res=f.variables['__xarray_dataarray_variable__'][:]\n",
+    "f.close()\n",
     "fig1,fig1_ttl=doPlot(CF_BMK,CF_Res,'Redwins 1-Day results')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
