--- a/source/baseline/Comparison_tool.ipynb
+++ b/source/baseline/Comparison_tool.ipynb
@@ -145,7 +145,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Relative bias"
+    "## Relative bias\n",
+    "Relative bias = (RES-BMK)/BMK"
    ]
   },
   {
