--- a/source/dask/Dask_aggregation_for_each_file.ipynb
+++ b/source/dask/Dask_aggregation_for_each_file.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
     "        if i <= 1:\n",
     "            count0 +=1\n",
     "    #print(count0/len(x))\n",
-    "    return count0/len(x)\n",
+    "    return (count0,len(x))\n",
     "\n",
     "satellite = 'Aqua'\n",
     "\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,6 @@
       "steps:  1 /  ['/Users/dprakas1/Desktop/modis_files/MYD06_L2.A2008001.0000.006.2013341193524.hdf'\n",
       " '/Users/dprakas1/Desktop/modis_files/MYD06_L2.A2008001.0005.006.2013341193207.hdf'\n",
       " '/Users/dprakas1/Desktop/modis_files/MYD06_L2.A2008001.0010.006.2013341192125.hdf']\n",
-      "<class 'numpy.ndarray'>\n",
       "['/Users/dprakas1/Desktop/modis_files/MYD03.A2008001.0000.006.2012066122450.hdf'\n",
       " '/Users/dprakas1/Desktop/modis_files/MYD03.A2008001.0005.006.2012066122516.hdf'\n",
       " '/Users/dprakas1/Desktop/modis_files/MYD03.A2008001.0010.006.2012066122416.hdf']\n"
@@ -146,7 +145,7 @@
        "(2030, 1354)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +178,6 @@
     "\n",
     "    # Read Level-2 MODIS data\n",
     "    lat,lon,CM = read_MODIS(fname1[j],fname2[j])\n",
-    "print(type(fname1))\n",
     "print((fname2))\n",
     "#rint(CM)\n",
     "#lat = lat.ravel()\n",
@@ -192,7 +190,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-136-9b8d7e57e565>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-136-9b8d7e57e565>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "MOD03_file=[]\n",
+    "\n",
+    "for MOD03_file in (fname2):\n",
+    "        #print(Dataset(MOD03_file[MOD03_file], \"r\"))\n",
+    "        #with Dataset(MOD03_file, \"r\") as f:\n",
+    "            #for line in f:\n",
+    "                #print(line)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/dprakas1/Desktop/modis_files/MYD06_L2.A2008001.0000.006.2013341193524.hdf /Users/dprakas1/Desktop/modis_files/MYD03.A2008001.0000.006.2012066122450.hdf\n",
+      "(2748620,)\n",
+      "   Longitude  Latitude          CM  CLD_pix  TOT_pix\n",
+      "0         15        52  (394, 394)      394      394\n",
+      "1         15        53  (345, 345)      345      345\n",
+      "2         15        54  (259, 259)      259      259\n",
+      "3         15        55  (225, 225)      225      225\n",
+      "4         15        56  (129, 129)      129      129\n",
+      "1.0\n",
+      "[47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70]\n",
+      "[15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38\n",
+      " 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62\n",
+      " 63 64 65 66]\n",
+      "[0 1 2 3]\n",
+      "/Users/dprakas1/Desktop/modis_files/MYD06_L2.A2008001.0005.006.2013341193207.hdf /Users/dprakas1/Desktop/modis_files/MYD03.A2008001.0005.006.2012066122516.hdf\n",
+      "(2748620,)\n",
+      "   Longitude  Latitude            CM  CLD_pix  TOT_pix\n",
+      "0         14        34  (1819, 1819)     1819     1819\n",
+      "1         14        35  (1920, 1920)     1920     1920\n",
+      "2         14        36  (1616, 1616)     1616     1616\n",
+      "3         14        37  (1284, 1284)     1284     1284\n",
+      "4         14        38  (1053, 1053)     1053     1053\n",
+      "1.0\n",
+      "[30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52]\n",
+      "[14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37\n",
+      " 38 39 40 41 42 43 44 45 46 47]\n",
+      "[0 1 2 3]\n",
+      "/Users/dprakas1/Desktop/modis_files/MYD06_L2.A2008001.0010.006.2013341192125.hdf /Users/dprakas1/Desktop/modis_files/MYD03.A2008001.0010.006.2012066122416.hdf\n",
+      "(2748620,)\n",
+      "   Longitude  Latitude            CM  CLD_pix  TOT_pix\n",
+      "0         11        16  (1218, 1218)     1218     1218\n",
+      "1         11        17  (1188, 1188)     1188     1188\n",
+      "2         11        18    (744, 744)      744      744\n",
+      "3         11        19    (330, 330)      330      330\n",
+      "4         11        20      (20, 20)       20       20\n",
+      "1.0\n",
+      "[13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34]\n",
+      "[11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34\n",
+      " 35 36 37 38]\n",
+      "[0 1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_pix = np.zeros((180, 360))\n",
+    "cloud_pix = np.zeros((180, 360))\n",
+    "for x,y in zip(fname1,fname2):\n",
+    "    print(x,y)\n",
+    "    myd06 = Dataset(x, \"r\")\n",
+    "    CM = myd06.variables[\"Cloud_Mask_1km\"][:,:,0]# Reading Specific Variable 'Cloud_Mask_1km'.\n",
+    "    CM = (np.array(CM,dtype='byte') & 0b00000110) >>1\n",
+    "    CM = np.array(CM).byteswap().newbyteorder()\n",
+    "    myd03 = Dataset(y, \"r\")\n",
+    "    latitude = myd03.variables[\"Latitude\"][:,:]\n",
+    "    longitude = myd03.variables[\"Longitude\"][:,:]\n",
+    "    cm=np.ravel(cm)\n",
+    "    print(cm.shape)\n",
+    "    lat=np.ravel(latitude)\n",
+    "    lon=np.ravel(longitude)\n",
+    "    cm=cm.astype(int)\n",
+    "    lon=lon.astype(int)\n",
+    "    lat=lat.astype(int)\n",
+    "    #print(lat,lon)\n",
+    "    d = {'Latitude' :  pd.Series(lat), 'Longitude' : pd.Series(lon),'CM':pd.Series(cm)} #Reading the values in a pandas dataframe\n",
+    "    df = pd.DataFrame(d,columns=['Latitude', 'Longitude','CM'])\n",
+    "    #print(df.head())\n",
+    "    df2=df.groupby(['Longitude','Latitude']).CM.apply(countzero)\n",
+    "    df3=df2.reset_index()\n",
+    "    df3[['CLD_pix','TOT_pix']]=pd.DataFrame(df3['CM'].tolist(),index=df3.index)\n",
+    "    print(df3.head())\n",
+    "    CF=df3['CLD_pix'].sum()/df3['TOT_pix'].sum()\n",
+    "    print(CF)\n",
+    "    print(np.unique(lat))\n",
+    "    print(np.unique(lon))\n",
+    "    print(np.unique(CM))\n",
+    "    \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       ...,\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_pix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -202,97 +339,52 @@
       "/Users/dprakas1/Desktop/modis_files/MYD06_L2.A2008001.0000.006.2013341193524.hdf\n",
       "/Users/dprakas1/Desktop/modis_files/MYD03.A2008001.0000.006.2012066122450.hdf\n",
       "<class 'numpy.ndarray'>\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[69 69 69 ... 47 47 47]\n",
-      "[15 15 15 ... 47 47 47]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dprakas1/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:28: UserWarning: `meta` is not specified, inferred from partial data. Please provide `meta` if the result is unexpected.\n",
-      "  Before: .apply(func)\n",
-      "  After:  .apply(func, meta={'x': 'f8', 'y': 'f8'}) for dataframe result\n",
-      "  or:     .apply(func, meta=('x', 'f8'))            for series result\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                          CM\n",
-      "Longitude Latitude          \n",
-      "0         0         1.000000\n",
-      "11        16        0.039409\n",
-      "          17        0.001684\n",
-      "          18        0.052419\n",
-      "          19        0.321212\n",
+      "[0]\n",
+      "[47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70]\n",
+      "[15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38\n",
+      " 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62\n",
+      " 63 64 65 66]\n",
+      "   Longitude  Latitude          CM\n",
+      "0         15        52  (394, 394)\n",
+      "1         15        53  (345, 345)\n",
+      "2         15        54  (259, 259)\n",
+      "3         15        55  (225, 225)\n",
+      "4         15        56  (129, 129)\n",
       "/Users/dprakas1/Desktop/modis_files/MYD06_L2.A2008001.0005.006.2013341193207.hdf\n",
       "/Users/dprakas1/Desktop/modis_files/MYD03.A2008001.0005.006.2012066122516.hdf\n",
       "<class 'numpy.ndarray'>\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[69 69 69 ... 47 47 47]\n",
-      "[15 15 15 ... 47 47 47]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dprakas1/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:28: UserWarning: `meta` is not specified, inferred from partial data. Please provide `meta` if the result is unexpected.\n",
-      "  Before: .apply(func)\n",
-      "  After:  .apply(func, meta={'x': 'f8', 'y': 'f8'}) for dataframe result\n",
-      "  or:     .apply(func, meta=('x', 'f8'))            for series result\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                          CM\n",
-      "Longitude Latitude          \n",
-      "0         0         1.000000\n",
-      "11        16        0.039409\n",
-      "          17        0.001684\n",
-      "          18        0.052419\n",
-      "          19        0.321212\n",
+      "[0]\n",
+      "[47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70]\n",
+      "[15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38\n",
+      " 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62\n",
+      " 63 64 65 66]\n",
+      "   Longitude  Latitude          CM\n",
+      "0         15        52  (394, 394)\n",
+      "1         15        53  (345, 345)\n",
+      "2         15        54  (259, 259)\n",
+      "3         15        55  (225, 225)\n",
+      "4         15        56  (129, 129)\n",
       "/Users/dprakas1/Desktop/modis_files/MYD06_L2.A2008001.0010.006.2013341192125.hdf\n",
       "/Users/dprakas1/Desktop/modis_files/MYD03.A2008001.0010.006.2012066122416.hdf\n",
       "<class 'numpy.ndarray'>\n",
-      "[0 0 0 ... 0 0 0]\n",
-      "[69 69 69 ... 47 47 47]\n",
-      "[15 15 15 ... 47 47 47]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dprakas1/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:28: UserWarning: `meta` is not specified, inferred from partial data. Please provide `meta` if the result is unexpected.\n",
-      "  Before: .apply(func)\n",
-      "  After:  .apply(func, meta={'x': 'f8', 'y': 'f8'}) for dataframe result\n",
-      "  or:     .apply(func, meta=('x', 'f8'))            for series result\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                          CM\n",
-      "Longitude Latitude          \n",
-      "0         0         1.000000\n",
-      "11        16        0.039409\n",
-      "          17        0.001684\n",
-      "          18        0.052419\n",
-      "          19        0.321212\n"
+      "[0]\n",
+      "[47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70]\n",
+      "[15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38\n",
+      " 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62\n",
+      " 63 64 65 66]\n",
+      "   Longitude  Latitude          CM\n",
+      "0         15        52  (394, 394)\n",
+      "1         15        53  (345, 345)\n",
+      "2         15        54  (259, 259)\n",
+      "3         15        55  (225, 225)\n",
+      "4         15        56  (129, 129)\n"
      ]
     }
    ],
    "source": [
     "cm = np.zeros((2030,1354), dtype=np.float32)\n",
     "\n",
-    "for MOD06_file,MOD03_file in np.nditer([fname1,fname2]):\n",
+    "for MOD06_file,MOD03_file in zip(fname1,fname2):\n",
     "    print(MOD06_file)\n",
     "    print(MOD03_file)\n",
     "    myd06 = Dataset(MOD06_file, \"r\")\n",
@@ -312,14 +404,50 @@
     "    lon=np.ravel(lon)\n",
     "    lon=lon.astype(int)\n",
     "    lat=lat.astype(int)\n",
-    "    print(cm)\n",
-    "    print(lat)\n",
-    "    print(lon)\n",
+    "    print(np.unique(cm))\n",
+    "    print(np.unique(lat))\n",
+    "    print(np.unique(lon))\n",
     "    d = {'Latitude' :  pd.Series(lat), 'Longitude' : pd.Series(lon),'CM':pd.Series(cm)} #Reading the values in a pandas dataframe\n",
     "    df = pd.DataFrame(d,columns=['Latitude', 'Longitude','CM']) #Creating a pandas dataframe\n",
-    "    df2=df1.groupby(['Longitude','Latitude']).CM.apply(countzero)\n",
-    "    df3=df2.to_frame()\n",
+    "    df2=df.groupby(['Longitude','Latitude']).CM.apply(countzero)\n",
+    "    df3=df2.reset_index()\n",
     "    print(df3.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "<class 'numpy.ndarray'>\n",
+      "[0]\n",
+      "None\n",
+      "<class 'numpy.ndarray'>\n",
+      "[0]\n",
+      "None\n",
+      "<class 'numpy.ndarray'>\n",
+      "[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mod06_file=[]\n",
+    "for i in (fname1):\n",
+    "    print(mod06_file.append(i))\n",
+    "    myd06 = Dataset(MOD06_file, \"r\")\n",
+    "    CM = myd06.variables[\"Cloud_Mask_1km\"][:,:,0]# Reading Specific Variable 'Cloud_Mask_1km'.\n",
+    "    CM = (np.array(CM,dtype='byte') & 0b00000110) >>1\n",
+    "    CM = np.array(CM).byteswap().newbyteorder()\n",
+    "    #cm = da.from_array(CM, chunks =(2030,1354))\n",
+    "    print(type(cm))\n",
+    "    cm=np.ravel(cm)\n",
+    "    cm=cm.astype(int)\n",
+    "    print(np.unique(cm))"
    ]
   },
   {
