--- a/source/dask/Dask_aggregation_for_each_file.ipynb
+++ b/source/dask/Dask_aggregation_for_each_file.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -224,44 +224,236 @@
      "text": [
       "/Users/dprakas1/Desktop/modis_files/MYD06_L2.A2008001.0000.006.2013341193524.hdf /Users/dprakas1/Desktop/modis_files/MYD03.A2008001.0000.006.2012066122450.hdf\n",
       "(2748620,)\n",
+      "(2748620, 3)\n",
       "   Longitude  Latitude          CM  CLD_pix  TOT_pix\n",
       "0         15        52  (394, 394)      394      394\n",
       "1         15        53  (345, 345)      345      345\n",
       "2         15        54  (259, 259)      259      259\n",
       "3         15        55  (225, 225)      225      225\n",
       "4         15        56  (129, 129)      129      129\n",
-      "1.0\n",
+      "       0\n",
+      "0    1.0\n",
+      "1    1.0\n",
+      "2    1.0\n",
+      "3    1.0\n",
+      "4    1.0\n",
+      "5    1.0\n",
+      "6    1.0\n",
+      "7    1.0\n",
+      "8    1.0\n",
+      "9    1.0\n",
+      "10   1.0\n",
+      "11   1.0\n",
+      "12   1.0\n",
+      "13   1.0\n",
+      "14   1.0\n",
+      "15   1.0\n",
+      "16   1.0\n",
+      "17   1.0\n",
+      "18   1.0\n",
+      "19   1.0\n",
+      "20   1.0\n",
+      "21   1.0\n",
+      "22   1.0\n",
+      "23   1.0\n",
+      "24   1.0\n",
+      "25   1.0\n",
+      "26   1.0\n",
+      "27   1.0\n",
+      "28   1.0\n",
+      "29   1.0\n",
+      "..   ...\n",
+      "823  1.0\n",
+      "824  1.0\n",
+      "825  1.0\n",
+      "826  1.0\n",
+      "827  1.0\n",
+      "828  1.0\n",
+      "829  1.0\n",
+      "830  1.0\n",
+      "831  1.0\n",
+      "832  1.0\n",
+      "833  1.0\n",
+      "834  1.0\n",
+      "835  1.0\n",
+      "836  1.0\n",
+      "837  1.0\n",
+      "838  1.0\n",
+      "839  1.0\n",
+      "840  1.0\n",
+      "841  1.0\n",
+      "842  1.0\n",
+      "843  1.0\n",
+      "844  1.0\n",
+      "845  1.0\n",
+      "846  1.0\n",
+      "847  1.0\n",
+      "848  1.0\n",
+      "849  1.0\n",
+      "850  1.0\n",
+      "851  1.0\n",
+      "852  1.0\n",
+      "\n",
+      "[853 rows x 1 columns]\n",
       "[47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70]\n",
       "[15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38\n",
       " 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62\n",
       " 63 64 65 66]\n",
-      "[0 1 2 3]\n",
+      "[1.]\n",
       "/Users/dprakas1/Desktop/modis_files/MYD06_L2.A2008001.0005.006.2013341193207.hdf /Users/dprakas1/Desktop/modis_files/MYD03.A2008001.0005.006.2012066122516.hdf\n",
       "(2748620,)\n",
+      "(2748620, 3)\n",
       "   Longitude  Latitude            CM  CLD_pix  TOT_pix\n",
       "0         14        34  (1819, 1819)     1819     1819\n",
       "1         14        35  (1920, 1920)     1920     1920\n",
       "2         14        36  (1616, 1616)     1616     1616\n",
       "3         14        37  (1284, 1284)     1284     1284\n",
       "4         14        38  (1053, 1053)     1053     1053\n",
-      "1.0\n",
+      "       0\n",
+      "0    1.0\n",
+      "1    1.0\n",
+      "2    1.0\n",
+      "3    1.0\n",
+      "4    1.0\n",
+      "5    1.0\n",
+      "6    1.0\n",
+      "7    1.0\n",
+      "8    1.0\n",
+      "9    1.0\n",
+      "10   1.0\n",
+      "11   1.0\n",
+      "12   1.0\n",
+      "13   1.0\n",
+      "14   1.0\n",
+      "15   1.0\n",
+      "16   1.0\n",
+      "17   1.0\n",
+      "18   1.0\n",
+      "19   1.0\n",
+      "20   1.0\n",
+      "21   1.0\n",
+      "22   1.0\n",
+      "23   1.0\n",
+      "24   1.0\n",
+      "25   1.0\n",
+      "26   1.0\n",
+      "27   1.0\n",
+      "28   1.0\n",
+      "29   1.0\n",
+      "..   ...\n",
+      "546  1.0\n",
+      "547  1.0\n",
+      "548  1.0\n",
+      "549  1.0\n",
+      "550  1.0\n",
+      "551  1.0\n",
+      "552  1.0\n",
+      "553  1.0\n",
+      "554  1.0\n",
+      "555  1.0\n",
+      "556  1.0\n",
+      "557  1.0\n",
+      "558  1.0\n",
+      "559  1.0\n",
+      "560  1.0\n",
+      "561  1.0\n",
+      "562  1.0\n",
+      "563  1.0\n",
+      "564  1.0\n",
+      "565  1.0\n",
+      "566  1.0\n",
+      "567  1.0\n",
+      "568  1.0\n",
+      "569  1.0\n",
+      "570  1.0\n",
+      "571  1.0\n",
+      "572  1.0\n",
+      "573  1.0\n",
+      "574  1.0\n",
+      "575  1.0\n",
+      "\n",
+      "[576 rows x 1 columns]\n",
       "[30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52]\n",
       "[14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37\n",
       " 38 39 40 41 42 43 44 45 46 47]\n",
-      "[0 1 2 3]\n",
+      "[1.]\n",
       "/Users/dprakas1/Desktop/modis_files/MYD06_L2.A2008001.0010.006.2013341192125.hdf /Users/dprakas1/Desktop/modis_files/MYD03.A2008001.0010.006.2012066122416.hdf\n",
       "(2748620,)\n",
+      "(2748620, 3)\n",
       "   Longitude  Latitude            CM  CLD_pix  TOT_pix\n",
       "0         11        16  (1218, 1218)     1218     1218\n",
       "1         11        17  (1188, 1188)     1188     1188\n",
       "2         11        18    (744, 744)      744      744\n",
       "3         11        19    (330, 330)      330      330\n",
       "4         11        20      (20, 20)       20       20\n",
-      "1.0\n",
+      "       0\n",
+      "0    1.0\n",
+      "1    1.0\n",
+      "2    1.0\n",
+      "3    1.0\n",
+      "4    1.0\n",
+      "5    1.0\n",
+      "6    1.0\n",
+      "7    1.0\n",
+      "8    1.0\n",
+      "9    1.0\n",
+      "10   1.0\n",
+      "11   1.0\n",
+      "12   1.0\n",
+      "13   1.0\n",
+      "14   1.0\n",
+      "15   1.0\n",
+      "16   1.0\n",
+      "17   1.0\n",
+      "18   1.0\n",
+      "19   1.0\n",
+      "20   1.0\n",
+      "21   1.0\n",
+      "22   1.0\n",
+      "23   1.0\n",
+      "24   1.0\n",
+      "25   1.0\n",
+      "26   1.0\n",
+      "27   1.0\n",
+      "28   1.0\n",
+      "29   1.0\n",
+      "..   ...\n",
+      "442  1.0\n",
+      "443  1.0\n",
+      "444  1.0\n",
+      "445  1.0\n",
+      "446  1.0\n",
+      "447  1.0\n",
+      "448  1.0\n",
+      "449  1.0\n",
+      "450  1.0\n",
+      "451  1.0\n",
+      "452  1.0\n",
+      "453  1.0\n",
+      "454  1.0\n",
+      "455  1.0\n",
+      "456  1.0\n",
+      "457  1.0\n",
+      "458  1.0\n",
+      "459  1.0\n",
+      "460  1.0\n",
+      "461  1.0\n",
+      "462  1.0\n",
+      "463  1.0\n",
+      "464  1.0\n",
+      "465  1.0\n",
+      "466  1.0\n",
+      "467  1.0\n",
+      "468  1.0\n",
+      "469  1.0\n",
+      "470  1.0\n",
+      "471  1.0\n",
+      "\n",
+      "[472 rows x 1 columns]\n",
       "[13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34]\n",
       "[11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34\n",
       " 35 36 37 38]\n",
-      "[0 1 2 3]\n"
+      "[1.]\n"
      ]
     }
    ],
@@ -287,16 +479,16 @@
     "    #print(lat,lon)\n",
     "    d = {'Latitude' :  pd.Series(lat), 'Longitude' : pd.Series(lon),'CM':pd.Series(cm)} #Reading the values in a pandas dataframe\n",
     "    df = pd.DataFrame(d,columns=['Latitude', 'Longitude','CM'])\n",
-    "    #print(df.head())\n",
+    "    print(df.shape)\n",
     "    df2=df.groupby(['Longitude','Latitude']).CM.apply(countzero)\n",
     "    df3=df2.reset_index()\n",
     "    df3[['CLD_pix','TOT_pix']]=pd.DataFrame(df3['CM'].tolist(),index=df3.index)\n",
     "    print(df3.head())\n",
-    "    CF=df3['CLD_pix'].sum()/df3['TOT_pix'].sum()\n",
+    "    CF=pd.DataFrame(df3['CLD_pix']/df3['TOT_pix'])\n",
     "    print(CF)\n",
     "    print(np.unique(lat))\n",
     "    print(np.unique(lon))\n",
-    "    print(np.unique(CM))\n",
+    "    print(np.unique(CF))\n",
     "    \n",
     "            "
    ]
