--- a/source/dask/dask_filewise.ipynb
+++ b/source/dask/dask_filewise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,14 @@
     "import numpy as np\n",
     "import dask.array as da\n",
     "import dask.dataframe as dd\n",
+    "import dask.delayed as delayed\n",
     "import time\n",
     "import math\n",
     "#import graphviz\n",
     "from netCDF4 import Dataset\n",
     "import os,datetime,sys,fnmatch\n",
-    "import h5py"
+    "import h5py\n",
+    "import dask"
    ]
   },
   {
@@ -182,8 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -265,9 +269,18 @@
       "  After:  .apply(func, meta={'x': 'f8', 'y': 'f8'}) for dataframe result\n",
       "  or:     .apply(func, meta=('x', 'f8'))            for series result\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 15.7 s, sys: 7.32 s, total: 23 s\n",
+      "Wall time: 8.48 s\n"
+     ]
     }
    ],
    "source": [
+    "%%time\n",
     "b1=[]\n",
     "cloud_pix = np.zeros((180, 360))\n",
     "for x,y in zip(fname1,fname2):\n",
@@ -279,6 +292,7 @@
     "    CM = myd06.variables[\"Cloud_Mask_1km\"][:,:,0]# Reading Specific Variable 'Cloud_Mask_1km'.\n",
     "    CM = (np.array(CM,dtype='byte') & 0b00000110) >>1\n",
     "    CM = np.array(CM).byteswap().newbyteorder()\n",
+    "    \n",
     "    print(\"CM intial shape:\",CM.shape)\n",
     "    cm = da.concatenate((cm,CM),axis=0)\n",
     "    #print(\"CM shape after con:\",cm.shape)\n",
@@ -289,7 +303,6 @@
     "    longitude = myd03.variables[\"Longitude\"][:,:]\n",
     "    print(\"Lat intial shape:\",latitude.shape)\n",
     "    print(\"lon intial shape:\",longitude.shape)\n",
-    "    \n",
     "    \n",
     "    lat = da.concatenate((lat,latitude),axis=0)\n",
     "    lon = da.concatenate((lon,longitude),axis=0)\n",
@@ -314,20 +327,22 @@
     "    cols = {0:'Latitude',1:'Longitude',2:'CM'}\n",
     "    df = df.rename(columns=cols)\n",
     "    \n",
-    "    df2=df.groupby(['Longitude','Latitude']).CM.apply(countzero).reset_index()\n",
+    "    df2=(df.groupby(['Longitude','Latitude']).CM.apply(countzero).reset_index())\n",
     "    print(type(df2))\n",
     "    df3=df2.compute()\n",
     "    \n",
     "    df4=[df3['Longitude'].values,df3['Latitude'].values,df3['CM'].values]\n",
-    "    \n",
+    "    #print(df4)\n",
+    "    #df3=df2.compute()\n",
     "    b1.append(df4)\n",
+    "    \n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1025,7 @@
        "         1.00000000e+00])]]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
